fix overflow

--- a/scss/boost.scss
+++ b/scss/boost.scss
@@ -134,4 +134,5 @@
 
 .promocode {
   margin-top: 33px;
+  margin-bottom: 91px;
 }
